lasdir = $(includedir)

nobase_las_HEADERS = \
    liblas/compatibility.hpp \
    liblas/cstdint.hpp \
    liblas/exception.hpp \
    liblas/guid.hpp \
    liblas/iterator.hpp \
    liblas/lasclassification.hpp \
    liblas/lascolor.hpp \
    liblas/laserror.hpp \
    liblas/lasheader.hpp \
    liblas/laspoint.hpp \
    liblas/lasreader.hpp \
    liblas/lasvariablerecord.hpp \
    liblas/lasspatialreference.hpp \
    liblas/laswriter.hpp \
    liblas/liblas.hpp \
    liblas/lasformat.hpp \
    liblas/capi/liblas.h \
    liblas/capi/las_version.h \
    liblas/capi/las_config.h \
    liblas/detail/endian.hpp \
    liblas/detail/fwd.hpp \
    liblas/detail/reader/reader.hpp \
    liblas/detail/reader/header.hpp \
    liblas/detail/reader/point.hpp \
    liblas/detail/sha1.hpp \
    liblas/detail/sharedptr.hpp \
    liblas/detail/timer.hpp \
    liblas/detail/utility.hpp \
    liblas/detail/writer/writer.hpp \
    liblas/index/datastream.hpp \
    liblas/index/index.hpp \
    liblas/index/storage.hpp \
	liblas/index/query.hpp \
    liblas/index/visitor.hpp